--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@astrojs/mdx": "^2.0.2",
     "@astrojs/partytown": "^2.0.2",
+    "@astrojs/svelte": "^5.6.0",
     "@astrojs/tailwind": "^5.0.4",
     "@iconify-json/ion": "^1.1.15",
     "@iconify-json/mdi": "^1.1.64",
@@ -29,7 +30,9 @@
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.49.9",
+    "svelte": "^4.2.18",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "dependencies": {}
 }
