--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "accessible-astro-starter",
-  "description": "An Accessible Starter Theme for Astro including several accessibility features and tools to help you build faster.",
-  "version": "3.1.2",
-  "author": "Mark Teekman",
-  "homepage": "https://accessible-astro.netlify.app/",
+  "name": "mood-2-movie",
+  "description": "Discover the perfect movie to match your mood with our innovative recommendation platform.",
+  "version": "1.0.0",
+  "author": "urimarti.com",
+  "homepage": "https://mood2movie.onrender.com/",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,9 +11,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/mdx": "^2.0.2",
     "@astrojs/partytown": "^2.0.2",
-    "@astrojs/svelte": "^5.6.0",
     "@astrojs/tailwind": "^5.0.4",
     "@iconify-json/ion": "^1.1.15",
     "@iconify-json/mdi": "^1.1.64",
@@ -30,7 +28,6 @@
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "sass": "^1.49.9",
-    "svelte": "^4.2.18",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.2.7"
   },
